<resources>
    <string name="app_name">Masum mama</string>
    <string name="add_contact">Add contact</string>
    <string name="compose_sms">Compose SMS</string>
    <string name="search_hint">Search contacts…</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="invert_selection">Invert selection</string>
    <string name="clear_selection">Clear selection</string>
    <string name="import_contacts">Import Contacts</string>
    <string name="empty_contacts">No contacts yet\nTap + to add one</string>
    <string name="empty_search">No contacts match your search</string>
</resources>
